# chick-cal

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
chick_cal/: gen_cal.py  psb.ics
