[tool.poetry]
name = "chick-cal"
version = "0.1.0"
description = ""
authors = ["Kaung Htet <kayhzaw@gmail.com>"]
readme = "README.md"
packages = [{include = "chick_cal"}]

[tool.poetry.dependencies]
python = "^3.11"
ics = "^0.7.2"
requests = "^2.31.0"
black = "^23.7.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
